// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.



//protobuf 有2个版本，语法不同，默认版本是 proto2
//如果需要 proto3，则需要在非空非注释第一行使用 syntax = "proto3" 标明版本。现在推荐使用proto3版本。
syntax = "proto3";
option java_multiple_files = true;
//这指定了我们要用于生成的 Java 类的包。如果java_package.proto 文件中没有给出明确的选项，那么默认情况下将使用 proto 包（使用“package”关键字指定）。
//但是，proto 包通常不会成为好的 Java 包，因为 proto 包不应该以反向域名开头。如果我们从这个 .proto 生成另一种语言的代码，则该java_package选项无效。
option java_package = "com.yc.appgrpc";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";
package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}
message HelloReply {
  string message = 1;
}
